[package]
name = "discord-bot-rust"
version = "0.1.2"
edition = "2021"
authors = ["1innn"]
license = "MIT"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
poise = { version = "0.6.1" }
num-format = "0.4.4"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
reqwest = "0.12.5"